--- a/main.ipynb
+++ b/main.ipynb
@@ -35,7 +35,6 @@
     "    def __init__(self):\n",
     "        super(CNN, self).__init__()\n",
     "        \n",
-    "        # Convolutional layers\n",
     "        self.conv1 = nn.Conv2d(in_channels=3, out_channels=32, kernel_size=3, padding=1)\n",
     "        self.conv2 = nn.Conv2d(in_channels=32, out_channels=32, kernel_size=3, padding=1)\n",
     "        self.conv3 = nn.Conv2d(in_channels=32, out_channels=64, kernel_size=3, padding=1)\n",
@@ -44,30 +43,26 @@
     "        self.conv6 = nn.Conv2d(in_channels=64, out_channels=64, kernel_size=3, padding=1)\n",
     "        self.conv7 = nn.Conv2d(in_channels=64, out_channels=64, kernel_size=3, padding=1)\n",
     "\n",
-    "        # Pooling and Activation\n",
     "        self.pool = nn.MaxPool2d(kernel_size=2, stride=2)\n",
     "        self.relu = nn.ReLU()\n",
     "\n",
-    "        # Dropout layers\n",
     "        self.dropout1 = nn.Dropout(0.2)\n",
     "        self.dropout2 = nn.Dropout(0.3)\n",
     "        self.dropout3 = nn.Dropout(0.4)\n",
     "        self.dropout4 = nn.Dropout(0.5)\n",
     "\n",
-    "        # Adaptive pooling\n",
     "        self.adaptive_pool = nn.AdaptiveAvgPool2d((2, 2))\n",
     "\n",
-    "        # Dynamically calculate the flattened size for the fully connected layers\n",
+    "        \n",
     "        flattened_size = self._calculate_output_size()\n",
     "\n",
-    "        # Fully connected layers\n",
     "        self.fc1 = nn.Linear(flattened_size, 128)\n",
     "        self.fc2 = nn.Linear(128, 128)\n",
-    "        self.fc3 = nn.Linear(128, 5)  # Output is 2 for binary classification\n",
+    "        self.fc3 = nn.Linear(128, 5) \n",
     "\n",
     "    def _calculate_output_size(self):\n",
-    "        # Create a dummy input tensor with the expected image size\n",
-    "        x = torch.zeros(1, 3, 32, 32)  # Assuming input size of 32x32 like in the Keras model\n",
+    "        \n",
+    "        x = torch.zeros(1, 3, 32, 32)  \n",
     "        x = self.relu(self.conv1(x))\n",
     "        x = self.relu(self.conv2(x))\n",
     "        x = self.pool(x)\n",
@@ -89,7 +84,6 @@
     "        return flattened_size\n",
     "\n",
     "    def forward(self, x):\n",
-    "        # Forward pass through conv layers\n",
     "        x = self.relu(self.conv1(x))\n",
     "        x = self.relu(self.conv2(x))\n",
     "        x = self.pool(x)\n",
@@ -106,11 +100,9 @@
     "        x = self.pool(x)\n",
     "        x = self.dropout3(x)\n",
     "\n",
-    "        # Adaptive pooling and flatten\n",
     "        x = self.adaptive_pool(x)\n",
-    "        x = x.view(x.size(0), -1)  # Flatten the tensor\n",
+    "        x = x.view(x.size(0), -1)  \n",
     "\n",
-    "        # Fully connected layers\n",
     "        x = self.relu(self.fc1(x))\n",
     "        x = self.dropout4(x)\n",
     "        x = self.relu(self.fc2(x))\n",
@@ -156,9 +148,9 @@
    "outputs": [],
    "source": [
     "def load_classes_file(csv_file_path):\n",
-    "    # Load the CSV file containing the class labels\n",
+    "  \n",
     "    df = pd.read_csv(csv_file_path)\n",
-    "    df.columns = df.columns.str.strip()  # Remove leading and trailing whitespace\n",
+    "    df.columns = df.columns.str.strip()  \n",
     "    return df"
    ]
   },
@@ -220,7 +212,7 @@
    ],
    "source": [
     "train_classes_df = load_classes_file(train_classes_file)\n",
-    "print(\"Train Classes Columns:\", train_classes_df.columns.tolist())  # Check columns\n",
+    "print(\"Train Classes Columns:\", train_classes_df.columns.tolist()) \n",
     "test_classes_df = load_classes_file(test_classes_file)"
    ]
   },
@@ -303,23 +295,22 @@
     "        if batch_idx % 100 == 0:\n",
     "            print(f'Epoch {epoch+1}/{num_epochs}, Batch {batch_idx}/{len(train_loader)}, Loss: {loss.item():.4f}')\n",
     "\n",
-    "    # Validation\n",
     "    model.eval()\n",
     "    correct = 0\n",
     "    total = 0\n",
     "    with torch.no_grad():\n",
-    "        for data, target in test_loader:  # Indentation starts here\n",
+    "        for data, target in test_loader: \n",
     "            data, target = data.to(device), target.float().to(device)\n",
     "\n",
     "            outputs = model(data)\n",
     "\n",
-    "        # Apply sigmoid to outputs for multi-label classification\n",
-    "            predicted = (torch.sigmoid(outputs) > 0.5).float()  # Get binary predictions\n",
+    "        \n",
+    "            predicted = (torch.sigmoid(outputs) > 0.5).float() \n",
     "\n",
     "            correct += (predicted == target).sum().item()\n",
-    "            total += target.numel()  # Total number of elements (for multi-label)\n",
+    "            total += target.numel()  \n",
     "\n",
-    "# Compute accuracy after the loop\n",
+    "\n",
     "    accuracy = 100 * correct / total\n",
     "    print(f'Validation Accuracy: {accuracy:.2f}%')"
    ]
